cmake_minimum_required(VERSION 3.27)
project()

set(CMAKE_CXX_STANDARD 14)

add_executable(
        00.c
        "1부터 1000까지의 합.c"
        "1월 1일부터 현재 날짜까지의 날짜 차이를 구하기.c"
        "2 variable.cpp"
        "5개의 정수 중에서 짝수 최댓값과 홀수 최댓값을 구하는 프로그램.c"
        "5개의 정수 중에서 최댓값과 최솟값의 위치를 출력하는 프로그램.c"
        Complicated.c
        condition.c
        credit.c
        "Get Second.c"
        "Get Seconds.c"
        "Hello world.c"
        "if abs.c"
        "int and char.c"
        "int changing.c"
        logic.c
        "Plus Plus.c"
        pow.c
        relations.c
        Salary.c
        Salary.cpp
        test.c
        test.cpp
        test2.c
        "valuable test.cpp"
        "variable test.c"
        "variable test.cpp"
        "variable test2.c"
        "variable test3.c"
        "간단한 계산기 프로그램.c"
        "변수 상수.c"
        "변수 상수.cpp"
        "사각형 출력하기.c"
        "숫자 피라미드 출력하기.c"
        "시간 더하기 프로그램.c"
        "윤년 판독 프로그램.c"
        "재귀 함수로 조합 구현하기.c"
        "정해진 개수의 정수를 더하는 프로그램.c"
        "특정한 단의 구구단을 출력하는 프로그램.c"
        "특정한 문자열을 재귀 함수 반복 출력하기.c"
        "피라미드 출력하기.c"
        "화폐의 개수를 가장 적게 주는 방법 프로그램.c"
        "1부터 1000까지의 합.c"
        "1부터 1000까지의 합.c"
        "1부터 1000까지의 합.c"
        "윤년 판독 프로그램.c")
add_executable(new_target 1부터 1000까지의 합.c
        "1부터 1000까지의 합.c"
        "1부터 1000까지의 합.c"
        "윤년 판독 프로그램.c")
set(CMAKE_C_FLAGS "-fexec-charset=CP949")
